--- a/index.ipynb
+++ b/index.ipynb
@@ -191,7 +191,8 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    "
+    "    if restaurant['price']>alternative['rati']: return restaurant\n",
+    "    else: return alternative"
    ]
   },
   {
