Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -191,7 +191,7 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    if restaurant['price']>alternative['rati']: return restaurant\n",
+    "    if len(restaurant['price'])>len(alternative['price']: return restaurant\n",
     "    else: return alternative"
    ]
   },
