--- a/index.ipynb
+++ b/index.ipynb
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    pass"
+    "    for res"
    ]
   },
   {
