--- a/index.ipynb
+++ b/index.ipynb
@@ -284,7 +284,9 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    for res"
+    "    \n",
+    "    for restaurant in restaurants:\n",
+    "        "
    ]
   },
   {
