--- a/index.ipynb
+++ b/index.ipynb
@@ -284,9 +284,9 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    \n",
+    "    L=\n",
     "    for restaurant in restaurants:\n",
-    "        "
+    "        if restaurant['']"
    ]
   },
   {
