Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -286,7 +286,7 @@
     "def open_restaurants(restaurants):\n",
     "    L=\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant['']"
+    "        if not restaurant['is_closed']"
    ]
   },
   {
